GeneWeb version 3.09
--------------------

* GeneWeb server or CGI (gwd)
  - [20 Oct 00] In family updating, added a check that (created) persons
    are born before their death: this check was missing.
  - [11 Oct 00] Important improvement: added a system of template
    files for the personal pages. It is therefore possible to change the
    displaying of the personal pages, by editing the template. It is also
    possible, for a site accomodating several data bases, to have a
    personal template file specific to each data base.

* GeneWeb compiler (gwc)
  - [03 Oct 00] Fixed bug: there were an inconsistency between "gwc"
    and the inline updating, for persons "keys": the inline updating
    considered spaces in names as significant but not "gwc". Result:
    when cleaning up a data base (gwu + gwc) or when importing a data
    base from an old version of GeneWeb, it could cause names conflict
    errors (for example if both "Anne.0 Le Blanc" and "Anne.0 Leblanc"
    were defined).

* Gedcom to GeneWeb (ged2gwb)
  - [17 Oct 00] Fixed bug: problem of accessing persons with the same
    names when they contained declinations (Czech names, for example).

* GeneWeb data bases Transfer Program (gwtp)
  - [06 Oct 00] Added ability to put a trailer text.

* Setup program (gwsetup)
  - [19 Oct 00] Updated Swedish version (Lars Gustavsson)

* Documentation
  - [19 Oct 00] Updated Swedish documentation (Lars Gustavsson)

GeneWeb version 3.08
--------------------

* Setup program (gwsetup)
  - [21 Sep 00] Fixed bug: in recovery from an old version, if the
    destination data base already existed (created e.g. by a previous
    attempt), it could not overwrite the data base, even it pretended
    it was going to do it. Same problem (fixed also) for the creation
    of a data base from a GeneWeb source file.

* GeneWeb Service/CGI (gwd)
  - [25 Sep 00] When wizard or friend access failure, now display the