@@ -278,6 +278,12 @@ Arbres avec des barres cliquables</th>
 <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
 <td align=left valign=bottom>Ludovic Ledieu</td>
 </tr>
+<tr>
+<td align=right>Management of conflicts in "family" updating/<br>
+Gestion des conflits dans la mise a jour "famille"</th>
+<td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+<td align=left valign=bottom>Ludovic Ledieu</td>
+</tr>
 
 <tr><td colspan=3 align=center>&nbsp;</td></tr>
 
