@@ -2,6 +2,10 @@ GeneWeb version 3.09
 --------------------
 
 * GeneWeb server or CGI (gwd)
+  - [24 Oct 00] In family updating, when there is a name conflict while
+    creating a person, now proposes to try again with the first free number
+    Lightly changed the interface for the same situation in person updating.
+    Code written by Ludovic Ledieu.
   - [20 Oct 00] In family updating, added a check that (created) persons
     are born before their death: this check was missing.
   - [11 Oct 00] Important improvement: added a system of template
@@ -9,6 +13,9 @@ GeneWeb version 3.09
     displaying of the personal pages, by editing the template. It is also
     possible, for a site accomodating several data bases, to have a
     personal template file specific to each data base.
+
+* Lexicon (lang/lexicon.txt)
+  - [23 Oct 00] Updated Hebrew version (Jonathan B. Marder)
 
 * GeneWeb compiler (gwc)
   - [03 Oct 00] Fixed bug: there were an inconsistency between "gwc"
